Add ovirt4 logger
This patch adds a new "ovirt4" logger intended to be used by the
provider for version 4 of oVirt.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -935,6 +935,8 @@
   :level_fog_in_evm: error
   :level_rhevm: info
   :level_rhevm_in_evm: error
+  :level_ovirt4: info
+  :level_ovirt4_in_evm: error
   :level_scvmm: info
   :level_scvmm_in_evm: error
   :level_vim: warn
