--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1328,6 +1328,7 @@
         :ems_refresh_worker_openstack_network: {}
         :ems_refresh_worker_redhat: {}
         :ems_refresh_worker_vmware: {}
+        :ems_refresh_worker_vmware_cloud: {}
       :event_handler:
         :cpu_usage_threshold: 0.percent
         :nice_delta: 7
