--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1209,6 +1209,15 @@
       :event_catcher_vmware:
         :poll: 1.seconds
         :ems_event_max_wait: 60
+      :event_catcher_vmware_cloud:
+        :poll: 15.seconds
+        :topics:
+          :vcd.notifications20: "#"
+        :duration: 10.seconds
+        :capacity: 50
+        :amqp_port: 5672
+        :amqp_heartbeat: 30
+        :amqp_recovery_attempts: 4
       :event_catcher_openstack:
         :poll: 15.seconds
         :topics:
