--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,11 @@ app/assets/javascripts/locale/**/*.js
 
 # hopeless and should go anyway
 app/assets/javascripts/dynatree/jquery.dynatree.js
+
+# not ours or already processed or not javascript
+node_modules/
+vendor/assets/bower_components/
+public/
+tmp/
+db/
+coverage/
