Changes and refactors following review comments
* change API requests (GET and POST)
* move all views under deploy_containers_provider subdirectory
* add response error message
* add more i18n support
* fix router checkbox bug
* remove commented out code
* remove unused functions and dependencies

--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -33,6 +33,7 @@
   - ems_infra
   - container_dashboard
   - ems_container
+  - ems_container_deployment
   - configuration_job
   - container_project
   - container_route
