--- a/product/views/MiddlewareMessaging.yaml
+++ b/product/views/MiddlewareMessaging.yaml
@@ -9,13 +9,13 @@
 #
 
 # Report title
-title: Middleware Jms
+title: Middleware Messagings
 
 # Menu name
-name: Middleware Jms
+name: Middleware Messagings
 
 # Main DB table report is based on
-db: MiddlewareJms
+db: MiddlewareMessaging
 
 # Columns to fetch from the main table
 cols:
@@ -38,7 +38,7 @@ col_order:
 
 # Column titles, in order
 headers:
-- Jms Name
+- Messaging Name
 - Server
 
 # Condition(s) string for the SQL query
