--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1339,6 +1339,7 @@
         :ems_refresh_worker_redhat: {}
         :ems_refresh_worker_vmware: {}
         :ems_refresh_worker_vmware_cloud: {}
+        :ems_refresh_worker_vmware_cloud_network: {}
       :event_handler:
         :cpu_usage_threshold: 0.percent
         :nice_delta: 7
