--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,7 @@ GlobalVars:
 # Special Exclusions
 #
 AllCops:
+  TargetRubyVersion: 2.2
   Exclude:
     - gems/pending/VMwareWebService/wsdl41/vimws25MappingRegistry.rb
     - db/schema.rb
