--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,7 @@
     "phantomjs-polyfill": "^0.0.2",
     "fetch": "^1.0.0",
     "codemirror": "^5.16.0",
-    "array-includes": "^1.0.0"
+    "array-includes": "^1.0.0",
+    "qs": "^0.3.10"
   }
 }
