Remove metrics from messaging PR It's not wise to have so much functionality in one PR, so remove metrics from this PR.
Align and beautify wrongly aligned files

--- a/product/views/MiddlewareMessaging.yaml
+++ b/product/views/MiddlewareMessaging.yaml
@@ -9,13 +9,13 @@
 #
 
 # Report title
-title: Middleware Messagings
+title: Middleware Messaging
 
 # Menu name
-name: Middleware Messagings
+name: Middleware Messaging
 
 # Main DB table report is based on
-db: MiddlewareMessaging
+db: MiddlewareMessagings
 
 # Columns to fetch from the main table
 cols:
