--- a/product/live_metrics/middleware_datasource.yaml
+++ b/product/live_metrics/middleware_datasource.yaml
@@ -6,12 +6,12 @@
 #   a LiveMetric virtual model.
 #
 #   Format:
-#   - Provider native metric id: MiQ metric id
+#   - Provider native metric type id: MiQ metric id
 #
 supported_metrics:
-  - Available Count: mw_ds_available_count
-  - In Use Count: mw_ds_in_use_count
-  - Timed Out: mw_ds_timed_out
-  - Average Get Time: mw_ds_average_get_time
-  - Average Creation Time: mw_ds_average_creation_time
-  - Max Wait Time: mw_ds_max_wait_time
+  - Datasource Pool Metrics~Available Count: mw_ds_available_count
+  - Datasource Pool Metrics~In Use Count: mw_ds_in_use_count
+  - Datasource Pool Metrics~Timed Out: mw_ds_timed_out
+  - Datasource Pool Metrics~Average Get Time: mw_ds_average_get_time
+  - Datasource Pool Metrics~Average Creation Time: mw_ds_average_creation_time
+  - Datasource Pool Metrics~Max Wait Time: mw_ds_max_wait_time
