add RxJs, ManageIQ.angular.rxSubject
this is picked from changes by \@karelhala in #9753

--- a/bower.json
+++ b/bower.json
@@ -45,6 +45,7 @@
     "fetch": "^1.0.0",
     "codemirror": "^5.16.0",
     "array-includes": "^1.0.0",
-    "qs": "^0.3.10"
+    "qs": "^0.3.10",
+    "rxjs": "^4.1.0"
   }
 }
