--- a/product/dialogs/miq_dialogs/miq_provision_google_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_google_dialogs_template.yaml
@@ -293,7 +293,8 @@
           :values:
             false: 0
             true: 1
-          :description: Provision VM(s) as Preemptible
+          :description: Preemptible
+          :help: "A <a target=\"_blank\" href=\"https://cloud.google.com/compute/docs/instances/preemptible\">preemptible VM</a> will run for at most 24 hours and may be prematurely-terminated."
           :required: false
           :display: :edit
           :default: false
