Add product feature for blueprint deletions

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -5152,3 +5152,7 @@
       :description: Add Blueprint
       :feature_type: admin
       :identifier: blueprint_new
+    - :name: Remove
+      :description: Remove Blueprint
+      :feature_type: admin
+      :identifier: blueprint_delete
