--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -3852,6 +3852,35 @@
       :feature_type: control
       :identifier: network_router_tag
 
+# Load Balancer
+- :name: Load Balancers
+  :description: Everything under Load Balancers
+  :feature_type: node
+  :identifier: load_balancer
+  :children:
+  - :name: View
+    :description: View Load Balancers
+    :feature_type: view
+    :identifier: load_balancer_view
+    :children:
+    - :name: List
+      :description: Display Lists of Load Balancers
+      :feature_type: view
+      :identifier: load_balancer_show_list
+    - :name: Show
+      :description: Display Individual Load Balancers
+      :feature_type: view
+      :identifier: load_balancer_show
+  - :name: Operate
+    :description: Perform Operations on Load Balancers
+    :feature_type: control
+    :identifier: load_balancer_control
+    :children:
+    - :name: Edit Tags
+      :description: Edit Tags of Load Balancer
+      :feature_type: control
+      :identifier: load_balancer_tag
+
 # ContainerGroup
 - :name: Pods
   :description: Everything under Pods
