Rename feature vm_cockpit to cockpit_console as it also works with containers.

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -4964,7 +4964,7 @@
       - :name: Cockpit Console
         :description: Open the Cockpit console for VMs
         :feature_type: control
-        :identifier: vm_cockpit
+        :identifier: cockpit_console
       - :name: Edit Tags
         :description: Edit VM Tags
         :feature_type: control
