--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -184,7 +184,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_perf
   - vm_policy_sim
   - vm_show
@@ -292,7 +292,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_perf
   - vm_show
   - vm_show_list
@@ -332,7 +332,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_drift
   - vm_edit
   - vm_refresh
@@ -468,7 +468,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_drift
   - vm_edit
   - vm_perf
@@ -669,7 +669,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_compare
   - vm_drift
   - vm_perf
@@ -759,7 +759,7 @@
   - vm_infra_explorer
   - vm_vnc_console
   - vm_vmrc_console
-  - vm_cockpit
+  - cockpit_console
   - vm_compare
   - vm_drift
   - vm_perf
@@ -872,7 +872,7 @@
   - vm_timeline
   - vm_vmrc_console
   - vm_vnc_console
-  - vm_cockpit
+  - cockpit_console
 
 - :name: EvmRole-vm_user
   :read_only: true
@@ -930,7 +930,7 @@
   - vm_timeline
   - vm_vmrc_console
   - vm_vnc_console
-  - vm_cockpit
+  - cockpit_console
 
 - :name: EvmRole-tenant_administrator
   :read_only: true
