UI to register new Ironic nodes through Mistral
Adds a page to register new nodes for only OpenStack infrasturcture
providers. The page allows a user to upload a JSON file describing
the nodes to be added. The format of the JSON file is described here:
http://tripleo.org/environments/environments.html#instackenv

Upon submission, the controller parses the JSON file and submits it
through Mistral using the tripleo.baremetal.v1.register_or_update
workflow. It then polls mistral for the workflow to complete. After
completion, it queues a refresh to pickup the new nodes.

Subsequent patches will allow admins to also introspect nodes and make
nodes available for use (aka provide).

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -976,6 +976,11 @@
       :description: Request to Provision Hosts / Nodes
       :feature_type: admin
       :identifier: host_miq_request_new
+    - :name: Register Hosts / Nodes
+      :description: Register new Hosts / Nodes
+      :feature_type: admin
+      :identifier: host_register_nodes
+
 
 # Resource Pools
 - :name: Resource Pools
