--- a/db/fixtures/ae_datastore/ManageIQ/Deployment/ContainerProvider/System/StateMachine/Deployment.class/__class__.yaml
+++ b/db/fixtures/ae_datastore/ManageIQ/Deployment/ContainerProvider/System/StateMachine/Deployment.class/__class__.yaml
@@ -115,7 +115,7 @@ object:
       aetype: state
       name: create_ansible_inventory
       display_name: 
-      datatype: 
+      datatype: string
       priority: 6
       owner: 
       default_value: METHOD::create_ansible_inventory
@@ -155,7 +155,7 @@ object:
       aetype: state
       name: ansible_deployment
       display_name: 
-      datatype: 
+      datatype: string
       priority: 8
       owner: 
       default_value: METHOD::deployment
@@ -175,7 +175,7 @@ object:
       aetype: state
       name: add_provider
       display_name: 
-      datatype: 
+      datatype: string
       priority: 9
       owner: 
       default_value: METHOD::add_provider
@@ -195,7 +195,7 @@ object:
       aetype: state
       name: clean_up
       display_name: 
-      datatype: 
+      datatype: string
       priority: 10
       owner: 
       default_value: METHOD::cleanup
