OpenStack add Introspection function
This patch adds menu options allowing admins to introspect hosts.
Only hosts in "manageable" state can be introspected.

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -980,6 +980,10 @@
       :description: Register new Hosts / Nodes
       :feature_type: admin
       :identifier: host_register_nodes
+    - :name: Introspect Hosts / Nodes
+      :description: Introspect Hosts / Nodes
+      :feature_type: admin
+      :identifier: host_introspect
 
 
 # Resource Pools
