WIP arbitration rule field values testing

--- a/config/api.yml
+++ b/config/api.yml
@@ -16,6 +16,7 @@
   - :post
   - :patch
   - :delete
+  - :options
   :sets:
     :g: &g
     - :get
@@ -35,6 +36,13 @@
     - :post
     - :patch
     - :delete
+    :gpppdo: &gpppdo
+    - :get
+    - :put
+    - :post
+    - :patch
+    - :delete
+    - :options
 :collections:
   :accounts:
     :description: Accounts
@@ -1762,11 +1770,13 @@
     :identifier: miq_arbitration_rules
     :options:
     - :collection
-    :verbs: *gpppd
+    :verbs: *gpppdo
     :klass: ArbitrationRule
     :collection_actions:
       :get:
       - :name: read
+        :identifier: arbitration_rule_show_list
+      - :name: field_values
         :identifier: arbitration_rule_show_list
       :post:
       - :name: create
@@ -1775,6 +1785,9 @@
         :identifier: arbitration_rule_delete
       - :name: edit
         :identifier: arbitration_rule_edit
+      :options:
+      - :name: options
+        :identifier: arbitration_rule_options
     :resource_actions:
       :post:
       - :name: edit
@@ -1784,4 +1797,7 @@
       :delete:
       - :name: edit
         :identifier: arbitration_rule_delete
+      :options:
+      - :name: options
+        :identifier: arbitration_rule_options
 
