--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -5253,6 +5253,10 @@
     :description: Edit Arbitration Rule
     :feature_type: admin
     :identifier: arbitration_rule_edit
+  - :name: Arbitration Rule Options
+    :description: Arbitration Rule Options
+    :feature_type: admin
+    :identifier: arbitration_rule_options
 
 # Blueprints
 - :name: Blueprints
