Declare cloud networks a subcollection in api.yml

--- a/config/api.yml
+++ b/config/api.yml
@@ -1724,6 +1724,7 @@
     :identifier: miq_cloud_networks
     :options:
     - :collection
+    - :subcollection
     :verbs: *g
     :klass: CloudNetwork
     :collection_actions:
